--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,11 @@
 
 
 
-
+.card {
+  -webkit-box-shadow: -1px 5px 23px -1px rgba(189, 179, 189, 1);
+  -moz-box-shadow: -1px 5px 23px -1px rgba(189, 179, 189, 1);
+  box-shadow: -1px 5px 23px -1px rgba(189, 179, 189, 1);
+}
 
 .margen {
   margin-top: 40px;
