--- a/public/css/welcom.css
+++ b/public/css/welcom.css
@@ -41,7 +41,7 @@ h2 {
 /* STRUCTURE */
 
 .body {
-  background: url('../img/image.jpg') no-repeat center center fixed;
+  background: url('../img/pay.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
