--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,3 +45,17 @@
 -moz-box-shadow: -1px 0px 18px 0px rgba(99,109,122,0.88);
 box-shadow: -1px 0px 18px 0px rgba(99,109,122,0.88);
 }
+
+
+#carga{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  z-index: 9999;
+  background: url('/img/giphy14.gif') 50% 50% no-repeat rgb(249, 249, 249);
+  opacity: .8;
+  background-color: black;
+}
