--- a/public/css/home.css
+++ b/public/css/home.css
@@ -483,4 +483,8 @@
     margin-top: 60px;
   }
   
-  
+  .carousel {
+    -webkit-box-shadow: -1px 3px 46px -12px rgba(20, 20, 20, 0.51);
+    -moz-box-shadow: -1px 3px 46px -12px rgba(20, 20, 20, 0.51);
+    box-shadow: -1px 3px 46px -12px rgba(20, 20, 20, 0.51);
+  }
