Correo paypal sin login return a comprobante_pdf

--- a/public/css/style3.css
+++ b/public/css/style3.css
@@ -8331,3 +8331,7 @@ a[data-toggle="collapse"] {
       -moz-box-shadow: -1px 3px 46px -12px rgba(20, 20, 20, 0.51);
       box-shadow: -1px 3px 46px -12px rgba(20, 20, 20, 0.51);
     }
+
+    .margen{
+      margin-top: 65px;
+    }
