--- a/public/css/style-home.css
+++ b/public/css/style-home.css
@@ -8337,3 +8337,9 @@ a[data-toggle="collapse"] {
 
 .subscribe-form .form-control {
   background: #5356b1; }
+
+  #carouselExampleControls {
+    -webkit-box-shadow: 0px 0px 37px -10px rgba(0,0,0,1);
+-moz-box-shadow: 0px 0px 37px -10px rgba(0,0,0,1);
+box-shadow: 0px 0px 37px -10px rgba(0,0,0,1);
+}
